--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 analyses/clinvar/hgvs4variation.txt
 analyses/clinvar/hgvs4variation.txt.gz
 analyses/clinvar/hgvs4variation.txt.gz.md5
+
+# COSMIC fusion analyses
+analyses/cosmic/Cosmic_Fusion_v102_GRCh38.tsv
+analyses/cosmic/README_Cosmic_Fusion_v102_GRCh38.txt
